[package]
name = "ultimex"
version = "0.1.0"
authors = ["yeetz <milo@thekexpert.com", "dio2.0"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
smashline = { git = "https://github.com/blu-dev/smashline.git" }

compile-time-lua-bind-hash = "1.1"
paste = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
